partial fix for whitespace issues on smaller screens

--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   /*TODO: better background? Image like on PHENOM homepage?*/
   background-color: #c69ed3; 
-  padding: 25px 50px 10px 50px;
+  /* padding: 25px 50px 0px 50px; */
   height: 100vh;
   width: 100vw;
 }
@@ -11,6 +11,7 @@
 .main {
   display: flex;
   margin: 20px 0 0 0;
+  padding: 0px 50px 20px 50px;
   height: 100%;
 }
 
@@ -18,6 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 25px 50px 10px 50px;
 }
 
 .headerBar {
@@ -34,8 +36,9 @@
 
 .footer {
   display: flex;
+  flex: 1;
   align-items: center;
-  margin: 50px -50px -10px -50px;
+  /* margin: 0px -50px 0px -50px; */
   background: #6e386e;
   border: solid black 2px;
 }
